--- a/default.html
+++ b/default.html
@@ -38,7 +38,7 @@
     }
   </style>
   <body>
-    <!--{%- include header.html -%}-->
+    {%- include header.html -%}
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
